tests/suite/analyze/snapshots/suite__analyze__live_variables__clobber_across_call.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 50
expression: live_variables
---

clobber_across_call

+-----------------+
|     enter:      |
| {rsp}           |
| mov _x, 0       |
| {_x, rsp}       |
| mov _y, 1       |
| {_y, rsp, _x}   |
| call clobber    |
| {_y, rsp, _x}   |
| mov rax, _x     |
| {rax, rsp, _y}  |
| mov rdx, _y     |
| {rax, rdx, rsp} |
| jmp exit        |
| {rax, rdx, rsp} |
+-----------------+
  |
  |
  v
+-----------------+
|      exit:      |
| {rax, rdx, rsp} |
| ret             |
| {}              |
+-----------------+

