tests/suite/analyze/snapshots/suite__analyze__live_variables__clobber_across_div-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 61
expression: live_ranges
---
rsp              enter:
┊                  mov _x, 1
┊   _x             mov _y, 2
┊   ●   _y         mov rax, _x
┊   rax ┊          cqo
┊   ┊   ┊   rdx    idiv 5
┊   ┊   D   ┊      mov rdx, _y
┊   ┊       ┊    exit:
D   D       D      ret

