tests/suite/analyze/snapshots/suite__analyze__live_variables__clobber_across_div.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 71
expression: live_variables
---

  clobber_across_div

+---------------------+
|       enter:        |
| {rsp}               |
| mov _x, 1           |
| {rsp, _x}           |
| mov _y, 2           |
| {rsp, _x, _y}       |
| mov rax, _x         |
| {rax, rsp, _y}      |
| cqo                 |
| {rax, rdx, rsp, _y} |
| idiv 5              |
| {rax, rsp, _y}      |
| mov rdx, _y         |
| {rax, rdx, rsp}     |
| jmp exit            |
| {rax, rdx, rsp}     |
+---------------------+
  |
  |
  v
+---------------------+
|        exit:        |
| {rax, rdx, rsp}     |
| ret                 |
| {}                  |
+---------------------+

