tests/suite/analyze/snapshots/suite__analyze__live_variables__clobber_across_div_mod-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 114
expression: live_ranges
---
rsp              enter:
┊                  mov _x, 1
┊   _x             mov _y, 2
┊   ●   _y         mov rax, _x
┊   rax ┊          cqo
┊   ┊   ┊   rdx    idiv 1
┊   ┊   ┊   ┊      cqo
┊   ┊   ┊   ┊      idiv 10
┊   ┊   R   ┊      mov rax, _y
┊   ┊       ┊      jmp exit
┊   ┊       ┊    exit:
R   R       R      ret

