tests/suite/analyze/snapshots/suite__analyze__live_variables__clobber_across_div_mod.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 114
expression: live_variables
---

clobber_across_div_mod

+---------------------+
|       enter:        |
| {rsp}               |
| mov _x, 1           |
| {rsp, _x}           |
| mov _y, 2           |
| {rsp, _x, _y}       |
| mov rax, _x         |
| {rax, rsp, _y}      |
| cqo                 |
| {rax, rdx, rsp, _y} |
| idiv 1              |
| {rax, rsp, _y}      |
| cqo                 |
| {rax, rdx, rsp, _y} |
| idiv 10             |
| {rdx, rsp, _y}      |
| mov rax, _y         |
| {rax, rdx, rsp}     |
| jmp exit            |
| {rax, rdx, rsp}     |
+---------------------+
  |
  |
  v
+---------------------+
|        exit:        |
| {rax, rdx, rsp}     |
| ret                 |
| {}                  |
+---------------------+

