tests/suite/analyze/snapshots/suite__analyze__live_variables__clobber_across_hul-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 82
expression: live_ranges
---
rsp              enter:
┊                  mov _x, 1
┊   _x             mov _y, 2
┊   ●   _y         mov rax, _x
┊   rax ┊          imul 5
┊   ┊   A   rdx    mov rax, _y
┊   ┊       |      jmp exit
┊   ┊       |    exit:
A   A       ●      ret

