tests/suite/analyze/snapshots/suite__analyze__live_variables__clobber_across_hul.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 72
expression: live_variables
---

clobber_across_hul

+-----------------+
|     enter:      |
| {rsp}           |
| mov _x, 1       |
| {rsp, _x}       |
| mov _y, 2       |
| {rsp, _y, _x}   |
| mov rax, _x     |
| {rsp, _y, rax}  |
| imul 5          |
| {rsp, rdx, _y}  |
| mov rax, _y     |
| {rax, rdx, rsp} |
| jmp exit        |
| {rax, rdx, rsp} |
+-----------------+
  |
  |
  v
+-----------------+
|      exit:      |
| {rax, rdx, rsp} |
| ret             |
| {}              |
+-----------------+

